# algo-compiler

./: CMakeLists.txt  README.md
.kdev4/: algo_compiler.kdev4
examples/: bubble_sort.txt  gcd.txt  power.txt
include/: annotation.hpp  ast.hpp  compiler.hpp  constant_declaration.hpp  error_handler.hpp  expression.hpp  expression_def.hpp  function_definition.hpp  function_definition_def.hpp  program.hpp  program_def.hpp  skipper.hpp  statement.hpp  statement_def.hpp  type_setting.hpp  variable_declaration.hpp  vm.hpp
src/: ast.hpp  compiler.cpp  constant_declaration.cpp  expression.cpp  expression.hpp  expression_def.hpp  function_definition.cpp  main.cpp  program.cpp  statement.cpp  type_setting.hpp  variable_declaration.cpp  vm.cpp  vm.hpp
